# rye-template

./: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml
src/rye_template/: __init__.py  fermat.py
tests/: test_example.py
